# contraction-hierarchies

./: .gitignore  .gitmodules  CMakeLists.txt  Command.h  EliminationWeight.h  Makefile  README  README.md  clean.sh  compiler.make  config.h  main.cpp  make-release.sh  make.sh  options_parser.h  reformat_code.sh  run-contraction.sh  run-node-order.sh  uintEdgeWeight.h  uncrustify.cfg
command/: Construct.h  NodeOrder.h  TNR.h
datastr/: searchSpaces.h
datastr/graph/: SearchGraph.h  UpdateableGraph.h  edge.h  graph.h  path.h  pqNode.h
datastr/pqueue/: binaryHeap.h
docu/: chDocu.html  contraction.html  ddsgDocu.html  example.ddsg  index.html  node_order.html
io/: createGraph.h  output.h  serialize.h
many/: CMakeLists.txt  Makefile  manyToMany.cpp  manyToMany.h
processing/: ConstructCH.h  DijkstraCH.h
stats/: counter.h  utils.h
util/: misc.h  random.h
